testing color contrast correction for accessibility?

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -83,7 +83,7 @@ header {
     top: 5px;
     left: 50%;
     margin-left: -250px;
-    color: var(--accent-white-smoke);
+    color: var(--accent-hunyadi-yellow);
     font-family: "Racing Sans One";
     font-size: 56px;
     position: absolute;
